# Bucky

./: .gitignore  README.md  linux_overrides.txt  main.py  pyproject.toml  win_overrides.txt
assets/voice-data/: .gitignore
bucky/: agent.py  audio_sink.py  audio_source.py  config.py  fx_player.py  gpu_utils.py  http_server.py  memory_store.py  message_utils.py  recorder.py  robot.py  threading_utils.py  tools.py  voice.py
bucky/audio/: filter.py  sink.py  source.py
bucky/common/: conversion.py  gpu_utils.py  math_utils.py  message_utils.py  simple_types.py  thread_utils.py
bucky/tools/: emote.py  meal.py  memory.py  movement.py  timer.py  utility.py  weather.py
bucky/vision/: __init__.py  cam_cali_helper.py  face.py  user_tracking.py  webcam.py
bucky/voices/: __init__.py  voice.py  voice_fast.py  voice_quality.py  voice_quality_low_latency.py
cybug/: agent.py  voice.py
voice-data/: .gitignore
