[tool.poetry]
description = "Killer Bot"
authors = ["Mike Klimek"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.10"
langchain-ollama = "^0.2.1"
langchain-community = "^0.3.10"
langgraph = "^0.2.58"
# Installing torch with poetry is currently broken: https://github.com/pytorch/pytorch/issues/136275
torch = [
    {platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.5.1-cp312-none-macosx_11_0_arm64.whl#sha256=8c712df61101964eb11910a846514011f0b6f5920c55dbf567bff8a34163d5b1"},    
]
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
pytz = "^2024.2"
pyttsx3 = "^2.98"
sounddevice = "^0.5.1"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
