[project]
dependencies = [
    "langchain>=0.3.12",
    "langchain-ollama>=0.2.1",
    "langchain-community>=0.3.12",
    "langgraph>=0.2.59",
    "pytz>=2024.2",
    "sounddevice>=0.5.1",
    "requests>=2.32.3",
    "SpeechRecognition==3.12.0",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "httpx>=0.27.2",
    "opencv-python>=4.11.0.86",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "coqui-tts>=0.26.0",
    "mediapipe>=0.10.21",
    "deepfilternet>=0.5.6",
    "noisereduce>=3.0.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "main.py"

[tool.pdm]
distribution = false
